--- a/service.yaml
+++ b/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cart-page-svc
-  namespace: vaishakh-ns
+  #namespace: vaishakh-ns
 spec:
   selector:
     web: cart
