--- a/service.yaml
+++ b/service.yaml
@@ -2,11 +2,11 @@ apiVersion: v1
 kind: Service
 metadata:
   name: cart-page-svc
-  #namespace: vaishakh-ns
+  namespace: vaishakh-ns
 spec:
   selector:
     web: cart
   ports:
-      port: 3002
+    - port: 3002
       targetPort: 3000
   type: LoadBalancer
